# fbaquant23

./: .gitignore  README.md  pyproject.toml
c1.1fe/hw/: c1.1FE_hw00_template.ipynb  c1.1FE_hw04.ipynb  c1.1FE_hw_03.ipynb  c1.1FE_hw_template.ipynb  c1.1fe_hw01.ipynb  c1.1fe_hw02.ipynb  c1.1fe_hw06.ipynb  c1.1fe_hw07.ipynb  c1.1fe_hw08.ipynb
c1.2fai/hw/: FAI_Week99_jaepilchoi_template.ipynb  FAI_hw03_jaepilchoi.ipynb  FAI_hw06_jaepilchoi.ipynb  FAI_hw07_jaepilchoi.ipynb  FAI_hw08_jaepilchoi.ipynb  FAI_hw99_jaepilchoi_template copy.ipynb  hw01_FBAagent_jaepil.ipynb
c1.2fai/hw/ace_the_datascience_interview/: easy.ipynb  medium.ipynb
c1.2fai/hw/hw02/: FAI_hw02_jaepilchoi.ipynb  krx.py
c1.2fai/hw/hw08/: tesla1.txt  tesla2.txt  tesla3.txt  tesla4.txt  tesla5.txt  tesla6.txt  tesla7.txt
s1.2ap/data_teamwork/: sandbox.ipynb
s1.2ap/hw/: FBA_AP_HW15.docx  FBA_AP_HW16.docx  FBA_AP_HW5.docx  FBA_AP_HW7.docx  FBA_AP_HW8.docx  Solution of HW5.docx  hw02.ipynb  s1.2ap_hw02.ipynb  s1.2ap_hw03.ipynb  s1.2ap_hw05.ipynb  s1.2ap_hw_template.ipynb
s1.2ap/hw/data/: BRK13F.csv  Header.csv  Market.csv  Size_Factor.csv  TB3MS.csv  Value_Factor.csv
s2.1ap/data_teamwork/: Fama-French 3Factor Model - 데이터 분석.pptx
s2.1ap/hw/: FBA_AP_HW2.docx  FBA_AP_HW3.docx  FBA_AP_HW4.docx  FBA_AP_HW6.docx  FBA_AP_HW9.docx  s1.2ap_hw03.ipynb  s1.2ap_hw04.ipynb  s1.2ap_hw05.ipynb
s2.2pm/hw/: PM_Week02_jaepilchoi.ipynb  PM_Week03_jaepilchoi.ipynb  PM_Week06_jaepilchoi.ipynb  PM_Week08_jaepilchoi.ipynb  PM_Week99_jaepilchoi_template copy.ipynb  PM_Week99_jaepilchoi_template.ipynb  eda_utils.py
(+16 files in other folders)
