[tool.poetry]
name = "fbapoetry310"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
tqdm = "^4.66.1"
statsmodels = "^0.14.0"
jupyterlab = "^4.0.7"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.31"
pykrx = "^1.0.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
